tests/runnable/test_08_basic_op.hd
// test 8 : Has a single '+' operator
// Parser / Lexer Valid: Yes

float foo()
{
    float a;
    // random comment
    a = 3.0 + 4.1;
    return a;
}

void main()
{
    foo();
}