tests/invalid/test_34_invalid_type.hd
// test 34 : invalid type 'foo'
// Parser / Lexer Valid: Yes

int main(foo a)
{
    return 34;
}